# CIDA-plugin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt
cida_plugin/: __init__.py  agent.py  config.py  consensus.py  core.py  deliberation.py  diagnostics.py  losses.py
experiments/: exp_plugin_early_stop.py  exp_plugin_encoders.py  run_plugin_benchmark.py
tests/: test_plugin.py
