[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cida-plugin"
version = "2.0.0"
description = "Universal Evidence-Grounded Multi-Agent Deliberation Layer for any transformer encoder"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Kairat Zhaksylykov", email = "zhaksylykov.k06@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: Apache Software License"
]
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "transformers>=4.0",
  "huggingface_hub>=0.14.0"
]

[project.optional-dependencies]
bpe = [
  "tokenizers>=0.15"
]
benchmarks = [
  "datasets>=3.0",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "tokenizers>=0.15"
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.3.0",
  "black>=24.0.0",
  "tokenizers>=0.15"
]

[project.urls]
Homepage = "https://github.com/Kairatzh/cida"
Repository = "https://github.com/Kairatzh/cida.git"
Documentation = "https://github.com/Kairatzh/cida#readme"
Issues = "https://github.com/Kairatzh/cida/issues"

[tool.setuptools]
packages = ["cida_plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=cida --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']